--- a/how-much-you-would-earn/public/index.html
+++ b/how-much-you-would-earn/public/index.html
@@ -11,9 +11,11 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
-  <body>
+  <body style="background: url(https://www.rabstol.net/uploads/gallery/main/144/rabstol_net_bitcoin_01.jpg); background-size: 100%;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
 
